# ugg-match-api

./: .gitignore  Cargo.toml
src/: main.rs  structs.rs  ui.rs  ui_logic.rs
src/graphql/: fetch_match.graphql  fetch_profile_rank_queries.graphql  match_query.graphql  overall_player_ranking.graphql  player_suggestion_query.graphql  profile_player_info.graphql  structs.rs  update_profile_query.graphql
src/networking/: networking.rs
