[package]
name = "ugg-match-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0" # This is not needed for now, but may be in the future
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }
tokio = { version = "1", features = ["rt", "rt-multi-thread"], default-features = false }
chrono = "0.4.23"
eframe = { version = "0.27.2", features = [] }
bytes = "1.4.0"
png = "0.17.9"
async-channel = "1.9.0"
egui-dropdown = "0.9.0"

[profile.release]
lto = true
